# Theory_of_parallelism

Lab_1/: CMakeLists.txt
Lab_2/Task_1/: Makefile  mxv.c
Lab_2/Task_2/: Makefile  integrate.c  run_tests.sh
Lab_2/Task_3/: Makefile  run_tests.sh  system_solution.cpp
Lab_3/Task1/: CMakeLists.txt  main.cpp  run_scaling_tests.sh
Lab_3/Task2/: CMakeLists.txt  README.md  main.cpp
Lab_4/: main.py
Lab_5/: main.py
task2/: Table_1.md  server_info.txt  task2_1.c
task_1/: CMakeLists.txt  Readme.md  main.cpp
